syntax = "proto3";
package proto;
option go_package = "../proto";

service SearchMovieService {
    rpc SearchMovie(SearchMovieRequest) returns (SearchMovieResponse);
}

message SearchMovieRequest {
    int32 pagination = 1;
    string searchword = 2;
}

message SearchMovieResponse {
    repeated SearchMovieItemResponse search = 1;
    string response = 2;
}

message SearchMovieItemResponse {
    string title = 1;
    string year = 2;
    string imdbID = 3;
    string type = 4;
    string poster = 5;
}